--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
+    font-family: 'Open Sans', sans-serif;
 }
 
 body,
@@ -17,7 +18,7 @@ html {
     text-decoration: none;
     font-family: Arial, sans-serif;
     /* Fallback to sans-serif if Arial is not available */
-    line-height: 1.6;
+    line-height: 1.5;
     /* Improve readability */
 }
 
@@ -35,10 +36,6 @@ h6 {
 #home {
     width: 100vw;
     height: 100vh;
-    /* position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center; */
     background: black;
 }
 
@@ -77,7 +74,6 @@ canvas {
     width: 100vw;
     height: 100vh;
     z-index: 1;
-    /* background: #111; Dark background */
     background: #1f243d;
 }
 
@@ -86,7 +82,6 @@ canvas {
     z-index: 1;
     margin-left: 15%;
     text-align: left;
-    /* Left margin */
     color: white;
 }
 
@@ -113,7 +108,7 @@ section {
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 30px;
+    padding: 25px;
 }
 
 .about-section {
@@ -145,12 +140,6 @@ section {
     margin-bottom: 10px;
 }
 
-.profile-img {
-    max-width: 80%;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 /* Center content on smaller screens */
 @media (max-width: 992px) {
     .text-lg-start {
@@ -158,13 +147,6 @@ section {
     }
 }
 
-.skills-card {
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    background-color: #fff;
-}
 
 .skill {
     display: inline-block;
@@ -172,7 +154,6 @@ section {
     padding: 10px;
     border: 1px solid #007bff;
     border-radius: 5px;
-    display: inline-block;
     color: #007bff;
     cursor: pointer;
     transition: linear .3s;
@@ -182,15 +163,17 @@ section {
 
 }
 
-@keyframes fadeIn {
-/* from {
-    opacity: 0;
-    transform: translateY(10px);
+
+.skills-card {
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
-to {
-    opacity: 1;
-    transform: translateY(0);
-} */
+
+@keyframes fadeIn {
 
 0% { opacity: 0; transform: translateY(10px); }
 50% { opacity: 1; transform: translateY(0); }
@@ -232,6 +215,7 @@ to {
 
 .project-card {
     margin: 10px;
+    margin-bottom: 40px;
     padding: 20px 40px;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -244,8 +228,24 @@ to {
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    /* background-color: #f9f9f9; */
     background-color: #fff;
+}
+
+.project-card h3 {
+    color: #007bff;
+}
+
+.project-card ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.project-card ul li {
+    margin-bottom: 8px;
+}
+
+.btn {
+    margin-right: 10px;
 }
 
 @media (max-width: 576px) {
@@ -321,34 +321,9 @@ ul {
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    /* background-color: #f9f9f9; */
     background-color: #fff;
 }
 
-.project-card {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-.project-card h3 {
-    color: #007bff;
-}
-
-.project-card ul {
-    list-style-type: none;
-    padding-left: 0;
-}
-
-.project-card ul li {
-    margin-bottom: 8px;
-}
-
-.btn {
-    margin-right: 10px;
-}
 
 /* footer */
 
